<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_100">

        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/circle_logo"
            android:layout_marginStart="12dp"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            style="@style/ItalicBlackFifty"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:layout_marginStart="10dp"
            app:layout_constraintStart_toEndOf="@+id/img_logo"
            app:layout_constraintTop_toTopOf="@id/img_logo"
            app:layout_constraintBottom_toBottomOf="@+id/img_logo"/>

        <View
            android:id="@+id/border"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:background="@color/black_100"
            android:layout_marginTop="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_logo"/>

        <ImageView
            android:id="@+id/img_load"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_cloud_download_24px"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_load"
            app:layout_constraintBottom_toBottomOf="@+id/tv_load"/>

        <TextView
            style="@style/NormalBlack15"
            android:id="@+id/tv_load"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/load"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintTop_toBottomOf="@+id/border"
            app:layout_constraintStart_toEndOf="@+id/img_load"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/img_create"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_create_24px"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_create"
            app:layout_constraintBottom_toBottomOf="@+id/tv_create"/>

        <TextView
            style="@style/NormalBlack15"
            android:id="@+id/tv_create"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/create"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintStart_toEndOf="@+id/img_create"
            app:layout_constraintTop_toBottomOf="@id/tv_load"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/img_record"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_add_road_24px"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_record"
            app:layout_constraintBottom_toBottomOf="@+id/tv_record"/>

        <TextView
            style="@style/NormalBlack15"
            android:id="@+id/tv_record"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/record"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintStart_toEndOf="@+id/img_record"
            app:layout_constraintTop_toBottomOf="@id/tv_create"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <ImageView
            android:id="@+id/img_history"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/ic_history_24px"
            android:layout_marginStart="15dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_history"
            app:layout_constraintBottom_toBottomOf="@+id/tv_history"/>

        <TextView
            style="@style/NormalBlack15"
            android:id="@+id/tv_history"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:text="@string/history"
            android:gravity="center_vertical"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            app:layout_constraintStart_toEndOf="@+id/img_history"
            app:layout_constraintTop_toBottomOf="@id/tv_record"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>